# fujin

./: .gitignore  Cargo.toml  README.md  audit-scan.md  copilot-verified.txt  summary.txt  test-output.txt
crates/fujin-cli/: Cargo.toml
crates/fujin-cli/configs/: code-and-docs.yaml  simple.yaml
crates/fujin-cli/src/: main.rs
crates/fujin-config/: Cargo.toml
crates/fujin-config/src/: includes.rs  lib.rs  pipeline_config.rs  validation.rs
crates/fujin-core/: Cargo.toml
crates/fujin-core/src/: agent.rs  artifact.rs  checkpoint.rs  context.rs  copilot.rs  dag.rs  error.rs  event.rs  lib.rs  paths.rs  pipeline.rs  stage.rs  util.rs  workspace.rs  worktree.rs
crates/fujin-core/tests/: pipeline_tests.rs
crates/fujin-tui/: Cargo.toml
crates/fujin-tui/src/: app.rs  discovery.rs  event.rs  lib.rs  theme.rs
crates/fujin-tui/src/screens/: browser.rs  execution.rs  mod.rs  variables.rs
crates/fujin-tui/src/widgets/: help.rs
docs/: pipeline-authoring.md
docs/guides/: README.md  best-practices.md  branching-and-conditions.md  exports-and-dynamic-variables.md  getting-started.md  mcp-servers.md  multi-stage-pipelines.md  parallel-stages.md  pipeline-includes.md  pipeline-patterns.md  retry-groups.md
docs/research/: copilot-cli-integration.md
