[workspace]
members = ["crates/fujin-cli", "crates/fujin-core", "crates/fujin-config", "crates/fujin-tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1" }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform directories
dirs = "6"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
handlebars = "6"
walkdir = "2"

# Terminal UI
console = "0.15"
indicatif = "0.17"
ratatui = "0.29"
crossterm = "0.28"

# Env
dotenvy = "0.15"

# Internal crates
fujin-core = { path = "crates/fujin-core" }
fujin-config = { path = "crates/fujin-config" }
fujin-tui = { path = "crates/fujin-tui" }
