[package]
name = "fujin-core"
version.workspace = true
edition.workspace = true

[dependencies]
fujin-config = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
handlebars = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
async-trait = { workspace = true }
