[package]
name = "fujin-tui"
version.workspace = true
edition.workspace = true

[dependencies]
fujin-core = { workspace = true }
fujin-config = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
